<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/manual_input_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/color_333333"
            android:singleLine="true"
            android:text="@string/input" />

        <TextView
            android:id="@+id/tvClose"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:singleLine="true"
            android:text="@string/turn_off_flash"
            android:textColor="@color/color_333333"
            android:textSize="16sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/titleBar"
        android:background="@color/input_text_hint_color" />

    <View
        android:id="@+id/emptyView"
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:layout_below="@+id/divider" />

    <RelativeLayout
        android:id="@+id/inputOperation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emptyView"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <EditText
            android:id="@+id/etISBN"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@drawable/input_stroke"
            android:digits="0123456789-"
            android:hint="@string/input_isbn_hint"
            android:inputType="number"
            android:paddingLeft="14dp"
            android:singleLine="true"
            android:textColorHint="@color/input_text_hint_color"
            android:textSize="15sp" />


        <Button
            android:id="@+id/btnSearch"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/etISBN"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:background="@drawable/isbn_blue_bg"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

</RelativeLayout>