<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/black_80_alpha"
    android:gravity="center_vertical"
    android:minHeight="75dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawablePadding="10dp"
        android:drawableTop="@drawable/iv_input"
        android:gravity="center_horizontal"
        android:text="@string/input"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tvFlash"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawablePadding="10dp"
        android:drawableTop="@drawable/iv_flash"
        android:gravity="center_horizontal"
        android:text="@string/flash"
        android:textColor="@color/white"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvAlbum"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawablePadding="10dp"
        android:drawableTop="@drawable/iv_album"
        android:gravity="center_horizontal"
        android:text="@string/album"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tvCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawablePadding="10dp"
        android:drawableTop="@drawable/iv_cancel"
        android:gravity="center_horizontal"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:visibility="gone" />
    <!--
        <Button android:id="@+id/btnInput"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/input"
            android:textSize="16sp"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:textColor="#333333"
            android:background="@drawable/btn_square_bg"
            />
        <RelativeLayout 
            android:id="@+id/rlFlash"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_centerInParent="true"
            android:background="@drawable/btn_ellipse_bg"
            android:gravity="center_horizontal"
            >
        <TextView android:id="@+id/tvFlash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/turn_on_flash"
            android:textSize="16sp"
            android:textColor="#333333"
            android:layout_toRightOf="@+id/ivFlash"
            android:layout_centerVertical="true"
            android:paddingRight="6dp"
            />

        <ImageView
            android:id="@+id/ivFlash"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:src="@drawable/iv_flash_bg" />

        </RelativeLayout>
        <Button android:id="@+id/btnFinish"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/cancel_finish"
            android:textSize="16sp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="10dp"
            android:textColor="#333333"
            android:background="@drawable/btn_square_bg"
            />
    -->

</LinearLayout>