<?xml version="1.0" encoding="UTF-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/captureView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000">

    <FrameLayout
        android:id="@+id/captureIsbn"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <SurfaceView
            android:id="@+id/preview_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="#00000000" />
        <!-- 这个观点是用相机顶上的预览。它增加了取景器的矩形和片面的　　外面的透明度,以及激光扫描仪动画和结果分。 -->

        <com.google.zxing.client.android.ViewfinderView
            android:id="@+id/viewfinder_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent" />

        <LinearLayout
            android:id="@+id/result_view"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/result_view"
            android:orientation="vertical"
            android:padding="4dip"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="top"
                android:orientation="horizontal"
                android:padding="12dip">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="right"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/barcode_image_view"
                        android:layout_width="150dip"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dip"
                        android:adjustViewBounds="true"
                        android:maxHeight="150dip"
                        android:maxWidth="150dip"
                        android:scaleType="centerInside" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <!-- 扫描格式 -->

                        <TextView
                            android:id="@+id/format_text_view_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingRight="4dip"
                            android:text="@string/msg_default_format"
                            android:textColor="@color/result_minor_text"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/format_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/result_minor_text"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <!-- 扫描类型 -->

                        <TextView
                            android:id="@+id/type_text_view_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingRight="4dip"
                            android:text="@string/msg_default_type"
                            android:textColor="@color/result_minor_text"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/type_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/result_minor_text"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <!-- 扫描时间 -->

                        <TextView
                            android:id="@+id/time_text_view_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingRight="4dip"
                            android:text="@string/msg_default_time"
                            android:textColor="@color/result_minor_text"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/time_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/result_minor_text"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/meta_text_view_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingRight="4dip"
                            android:text="@string/msg_default_meta"
                            android:textColor="@color/result_minor_text"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/meta_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/result_minor_text"
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>

                <ScrollView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/contents_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autoLink="web"
                        android:paddingLeft="12dip"
                        android:textColor="@color/result_text"
                        android:textColorLink="@color/result_text"
                        android:textSize="22sp" />
                </ScrollView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/result_button_view"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:visibility="gone" />

                <Button
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:visibility="gone" />

                <Button
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:visibility="gone" />

                <Button
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/shopper_button"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/shopper_icon"
                    android:drawablePadding="4dip"
                    android:text="@string/button_google_shopper"
                    android:textSize="14sp"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>

        <!-- 镜头范围内扫描 -->

        <TextView
            android:id="@+id/status_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="100dp"
            android:background="@color/transparent"
            android:text="@string/scan_tips"
            android:textColor="@color/status_text"
            android:textSize="14sp"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical">

            <include layout="@layout/bottom_button" />
        </LinearLayout>
    </FrameLayout>
    <!-- input -->
    <LinearLayout
        android:id="@+id/manualInputIsbn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/input_isbn_bg_white"
        android:layout_gravity="top|left|center_vertical"
        android:baselineAligned="false"
        android:orientation="vertical"
        android:visibility="gone">

        <RelativeLayout
            android:id="@+id/titleBar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/input" />

            <TextView
                android:id="@+id/tvClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/turn_off_flash"
                android:textSize="14sp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:visibility="gone" />

        <View
            android:id="@+id/emptyView"
            android:layout_width="match_parent"
            android:layout_height="115dp" />

        <RelativeLayout
            android:id="@+id/inputOperation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <EditText
                android:id="@+id/etISBN"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@drawable/input_stroke"
                android:digits="0123456789-"
                android:hint="@string/input_isbn_hint"
                android:inputType="number"
                android:paddingLeft="14dp"
                android:singleLine="true"
                android:textColorHint="@color/input_text_hint_color"
                android:textSize="15sp" />


            <Button
                android:id="@+id/btnSearch"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@+id/etISBN"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:background="@drawable/button_blue_stroke"
                android:text="@string/ok"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </RelativeLayout>

    </LinearLayout>
    <!-- titleBar -->
    <LinearLayout
        android:id="@+id/llTitleBar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="top|left|center_vertical"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <ImageView
            android:id="@+id/ivClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/scan_back_white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/scan_and_scan"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>
</FrameLayout>